Re-write of many parts to make it work correctly on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 *{
     margin: 0px;
-    inset: 0px;
 }
 
-html, body{
+body, html{
     height: 100%;
-    overflow-x: hidden;
+    width: 100%;
 }
 
 button{
@@ -17,21 +16,67 @@ ul{
     margin: 10px 0px 10px 0px;
 }
 
-.coloredSection{
-    color: white;
+a{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.elevated{
     background-color: #006b5a;
+    color: white;
+    box-shadow: 0px 0px 10px 0px black;
+}
+
+#sidebar{
+    position: fixed;
+    right: 0px;
+    height: 100%;
+    width: 0px;
+    z-index: 2;
+}
+
+#sidebarContent{
+    padding: 10px;
+    text-align: center;
+}
+
+.sidebarButton{
+    height: 50px;
+    width: 50px;
+    color: white;
+    border: 0;
+    align-self: center;
+    vertical-align: middle;
+    background-color: transparent;
+}
+
+#headerButton{
+    position: absolute;
+    right: 0px;
+    top: calc(50% - 25px);
+}
+
+#sidebarCover{
+    position: fixed;
+    background-color: black;
+    opacity: 0%;
+    visibility: hidden;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
 }
 
 #main{
+    height: 100%;
     display: flex;
     flex-direction: column;
     height: 100%;
+    z-index: 0;
 }
 
 #header{
     text-align: center;
     position: sticky;
-    box-shadow: 0px 0px 10px 0px black;
     padding: 20px;
     flex-shrink: 0;
 }
@@ -43,68 +88,24 @@ ul{
     flex: 1 0 auto;
 }
 
+#content p{
+    margin-bottom: 10px;
+}
+
 #footer{
     padding: 10px;
     flex-shrink: 0;
+    background-color: black;
 }
 
-#theme{
+#footer a{
+    color: white;
+}
+
+#themeButton{
     border: 0;
     border-radius: 20px;
     padding: 5px 10px 5px 10px;
     float: inline-end;
     align-self: center;
-}
-
-#sidebarOpen{
-    border: 0;
-    left: calc(100% - 50px);
-    border-radius: 20px;
-    position: absolute;
-    align-self: center;
-    vertical-align: middle;
-    background-color: transparent;
-}
-
-.material-symbols-outlined{
-    color: white;
-}
-
-#sidebar{
-    position: absolute;
-    left: 100%;
-    width: 400px;
-    height: 100%;
-    margin: 0px 0px 0px 0px;
-    box-shadow: 0px 0px 10px 0px black;
-}
-
-.sidebarSeperator{
-    height: 2px;
-    background-color: #7595ac;
-    width: calc(inherit - 20px);
-    margin: 20px 10px 20px 10px;
-}
-
-.sidebarHeading{
-    margin-left: 10px;
-}
-
-.notFirstHeading{
-    margin-top: 20px;
-}
-
-.sidebarLinks{
-    text-align: center;
-    color: white;
-    margin-bottom: 5px;
-}
-
-#cover{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    opacity: 0%;
-    background-color: black;
-    visibility:hidden;
 }
